<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.PokeList">

	<LinearLayout android:id="@+id/all_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<TextView
			android:id="@+id/loading_filters"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/margin_top_16"
			android:text="@string/download_extra_data"/>
		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/filter_content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:weightSum="5">
			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent">
				<ImageView
					android:id="@+id/filter_button"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					android:layout_weight="1"
					android:src="@drawable/ic_filter_list_rounded"
					android:contentDescription="@string/sort_button"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/arrow_up"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent">
				<ImageView android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_baseline_arrow_upward"
					android:contentDescription="@string/up"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/filter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="4"
				android:orientation="vertical"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">
				<CheckBox
					android:id="@+id/chose_attack"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/sort_by_attack"/>
				<CheckBox
					android:id="@+id/chose_defense"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/sort_by_defend"/>
				<CheckBox
					android:id="@+id/chose_hp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/sort_by_hp"/>
			</LinearLayout>
		</androidx.constraintlayout.widget.ConstraintLayout>
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/poke_rv"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clipToPadding="false"
			android:orientation="vertical"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
		</androidx.recyclerview.widget.RecyclerView>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/service_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<ImageView
			android:id="@+id/loader"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clickable="true"
			android:focusable="true"
			app:srcCompat="@drawable/ic_vector_anim_loader"
		android:contentDescription="@string/download_image_descr"/>
		<ImageView
			android:id="@+id/error"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_broken_image"
			android:contentDescription="@string/download_image_descr"/>
	</LinearLayout>
	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/floatingActionButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:src="@drawable/ic_baseline_arrow_upward"/>
</FrameLayout>