<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/poke_main_image"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:src="@drawable/ic_broken_image"
		android:contentDescription="@string/poke_image_descr"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/guideline2"
		app:layout_constraintBottom_toBottomOf="@+id/linearLayout"/>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:orientation="vertical"
		app:layout_constraintStart_toEndOf="@+id/linearLayout"
		app:layout_constraintTop_toTopOf="parent">
		<TextView
			android:id="@+id/poke_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_top_16"
			android:textColor="@color/black"
			android:textSize="@dimen/textMain"
			tools:layout_editor_absoluteY="16dp"/>
		<TextView
			android:id="@+id/poke_weight"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_top_16"
			android:textColor="@color/black"
			android:textSize="@dimen/textMain"
			tools:layout_editor_absoluteY="51dp"/>
		<TextView
			android:id="@+id/poke_height"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_top_16"
			android:textColor="@color/black"
			android:textSize="@dimen/textMain"
			tools:layout_editor_absoluteY="86dp"/>

	</LinearLayout>

	<LinearLayout android:id="@+id/linearLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:orientation="vertical"
		app:layout_constraintStart_toEndOf="@+id/poke_main_image"
		app:layout_constraintTop_toTopOf="parent">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:textColor="@color/black"
			android:textSize="@dimen/textMain"
			android:text="@string/name"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:textColor="@color/black"
			android:textSize="@dimen/textMain"
			android:text="@string/weight"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:textColor="@color/black"
			android:textSize="@dimen/textMain"
			android:text="@string/height"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="32dp"
		android:orientation="horizontal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintTop_toBottomOf="@+id/linearLayout">
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/abilities"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/poke_types"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/margin_horizontal_small"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
	</LinearLayout>
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>